@@ -1,0 +1,3 @@
+flagsdir = $(pkgdatadir)/flags
+flags_DATA = czech.png denmark.png england.png france.png germany.png \
+	     iceland.png italy.png japan.png russia.png turkey.png usa.png
